--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
         "christophwurst/nextcloud": "^20.0",
 		"nextcloud/coding-standard": "^0.3.0",
 		"phpunit/phpunit": "^8"
+	},
+	"require": {
+		"ramsey/uuid": "^4.1"
 	}
 }
