--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@nextcloud/moment": "^1.1.1",
 		"@nextcloud/router": "^1.2.0",
 		"@nextcloud/vue": "^3.1.0",
+		"b64-to-blob": "^1.2.19",
 		"core-js": "^3.6.5",
 		"crypto-js": "^4.0.0",
 		"debounce": "^1.2.0",
