make the tests roll
Signed-off-by: Arthur Schiwon <blizzz@arthur-schiwon.de>

--- a/.drone.yml
+++ b/.drone.yml
@@ -45,6 +45,7 @@ steps:
           - wget https://raw.githubusercontent.com/nextcloud/travis_ci/master/before_install.sh
           - bash ./before_install.sh $APP_NAME $CORE_BRANCH $DB
           - cd ../server/apps/$APP_NAME
+          - make composer
           - cd tests/Unit/
           - phpunit --configuration phpunit.xml
     - name: php7.4
@@ -57,6 +58,7 @@ steps:
           - wget https://raw.githubusercontent.com/nextcloud/travis_ci/master/before_install.sh
           - bash ./before_install.sh $APP_NAME $CORE_BRANCH $DB
           - cd ../server/apps/$APP_NAME
+          - make composer
           - cd tests/Unit/
           - phpunit --configuration phpunit.xml
 
@@ -78,7 +80,7 @@ steps:
           - cd ../server
           - php occ app:enable $APP_NAME
           - cd apps/$APP_NAME
-          - composer install
+          - make composer
           - cd tests/Unit/
           - phpunit --configuration phpunit.xml
 
@@ -114,7 +116,7 @@ steps:
           - cd ../server
           - php occ app:enable $APP_NAME
           - cd apps/$APP_NAME
-          - composer install
+          - make composermake composer
           - cd tests/Unit/
           - phpunit --configuration phpunit.xml
 
